changed backend url to railway backend

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=http://localhost:4000/api
-REACT_APP_PICTURE_URL=http://localhost:4000/uploads
+REACT_APP_API_URL=http://crm_backend.railway.internal/api
+REACT_APP_PICTURE_URL=http://crm_backend.railway.internal/uploads
