--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_API_URL=http://crm_backend.railway.internal/api
 REACT_APP_PICTURE_URL=http://crm_backend.railway.internal/uploads
+CI=false
