--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=http://crm_backend.railway.internal/api
-REACT_APP_PICTURE_URL=http://crm_backend.railway.internal/uploads
+REACT_APP_API_URL=https://crm_backend.up.railway.app/api
+REACT_APP_PICTURE_URL=https://crm_backend.up.railway.app/uploads
 CI=false
